manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-web
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
