manifests/blue_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-blue
  labels:
    color: blue
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    color: blue
