manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: simple-web
  ports:
    - name: http
      port: 80
      targetPort: 80
